# free_test

./: RESULTS.md  eda_notebook.ipynb  processed_data_for_ml.csv  processed_data_for_ml.pkl  pyproject.toml
churn_prediction/: README.md  api.py  app.py  data.py  models.py  train.py
churn_prediction/app/: streamlit_app.py
churn_prediction/saved/: baseline.pkl  preprocessor.pkl  xgboost.pkl
